--- a/NumIssuesReceived.html
+++ b/NumIssuesReceived.html
@@ -5,7 +5,7 @@
 	
     <link rel="stylesheet" type="text/css" href="ext4/examples/shared/example.css" />
     <link rel="stylesheet" type="text/css" href="ext4/resources/css/ext-all.css">
-	
+	<script type="text/javascript" src="cpisapp/JSUtil.js"></script>
     <script type="text/javascript" src="ext4/ext-debug.js"></script>
     <script type="text/javascript" src="numissuesreceived.js"></script>
 	
