Refactored: Moved the main js' files into the js directory

--- a/IssueSource.html
+++ b/IssueSource.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="ext4/examples/shared/example.css" />
     <link rel="stylesheet" type="text/css" href="ext4/resources/css/ext-all.css">
     <script type="text/javascript" src="ext4/ext-debug.js"></script>
-    <script type="text/javascript" src="issuesource.js"></script>
+    <script type="text/javascript" src="js/issuesource.js"></script>
 	
 	<style type="text/css">
 		.fwd_floatLeft
