--- a/Top5Category.html
+++ b/Top5Category.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="ext4/resources/css/ext-all.css">
 	
     <script type="text/javascript" src="ext4/ext-debug.js"></script>
-    <script type="text/javascript" src="top5category.js"></script>
+    <script type="text/javascript" src="js/top5category.js"></script>
 	
 	<style type="text/css">
 		.fwd_floatLeft
